Initial ETHUSDC Trading commit